# AdventOfCode2025

./: .gitignore  Cargo.toml  LICENSE  README.md
aoc/: Cargo.toml
aoc/src/: main.rs
aoc0/: Cargo.toml
aoc0/src/: lib.rs
aoc1-1/: Cargo.toml
aoc1-1/src/: lib.rs
aoc1/src/: lib.rs
aoc2/src/: lib.rs
aoc3/src/: lib.rs
aoc4/src/: lib.rs
aoc5/src/: lib.rs
aoc6/src/: lib.rs
aoc7/: Cargo.toml
aoc7/src/: lib.rs
