[package]
name = "aoc"
version = "0.1.0"
edition = "2024"

[dependencies]
aoc1 = { path = "../aoc1", optional = true }
aoc2 = { path = "../aoc2", optional = true }
aoc3 = { path = "../aoc3", optional = true }

[features]
default = ["day1", "day2", "day3"]

day1 = ["aoc1"]
day2 = ["aoc2"]
day3 = ["aoc3"]
